--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ PharoDebug.log
 SqueakDebug.log
 
 # Dolphin Smalltalk source file
-*.sml
+*.smlefrrr
 
 # Dolphin Smalltalk error file
 *.errors
@@ -29,3 +29,4 @@ SqueakDebug.log
 # Metacello-github cache
 /github-cache
 github-*.zip
+h
